--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Assets\Scripts\FadeEffectTransition.cs" />
     <Compile Include="Assets\Scripts\FadeIn_Transition.cs" />
     <Compile Include="Assets\Scripts\FadeOut_Transition.cs" />
+    <Compile Include="Assets\Scripts\Health.cs" />
     <Compile Include="Assets\Scripts\LevelManager.cs" />
     <Compile Include="Assets\Scripts\MenuManager.cs" />
     <Compile Include="Assets\Scripts\MusicManager.cs" />
